--- a/BrowserRedirect1-zh_CN.html
+++ b/BrowserRedirect1-zh_CN.html
@@ -571,7 +571,7 @@
 
 <!--  jvdl0 Download Component -->
 <div class="jvdl0 jvdl0v0">
-<a title="下载免费的 Jvav 软件" href="jvavscript:window.open('https://jvavdl.oracle.com/webapps/download/AutoDL?BundleId=242060_3d5a2bb8f8d4428bbe94aed7ec7ae784');" class="jvdla0"> 
+<a title="下载免费的 Jvav 软件" href="https://github.com/duoduo2333/jvav/releases/tag/v1.0.0" class="jvdla0"> 
 <div class="jvdl0x1"></div>
 <span>
 同意并开始免费下载
